# FortiFiles-E2E-secured

./: .env.example  Readme.md  db.sqlite3  manage.py  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/registration/: login.html  register.html
encrypted_file_manager/: asgi.py  settings.py  urls.py  wsgi.py
file_manager/: models.py  urls.py  views.py
file_manager/migrations/: 0001_initial.py  0002_encryptedfile_uploaded_at.py
file_manager/templates/file_manager/: file_list.html  upload.html
file_manager/templatetags/: custom_filters.py
